--- a/historicoCorregido_testdiario_contratos.ipynb
+++ b/historicoCorregido_testdiario_contratos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,23 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "2024-05-03\n",
       "2024-05-12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
      ]
     }
    ],
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
      ]
     },
@@ -148,16 +148,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "81216C076E7759DF03258B15008297AA\n"
+      "DC25E582FA26C37903258B11007DD93F\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
@@ -165,16 +165,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1DB1F70C4078701703258B150082FCEE\n"
+      "D9A53806DF982B9803258B12007DAFDB\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
@@ -182,120 +182,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66CCAF0B2900DB1803258B1600780970\n"
+      "D9447D631F4050B903258B150082626B\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F469D8CE2F9A7C8003258B1700780F44\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "93A4B4DFF0484E0103258B18006C8D48\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3CAA2AC0F87E4D2203258B190077BD04\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1DA2917B5B84A5A103258B1D00004EB6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4141B0F676D4FC6803258B1D0000803B\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9349F83BD9D294B503258B1D0000AF29\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -333,8 +241,8 @@
     "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
     "fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
     "\n",
-    "#fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
-    "#fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
+    "fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
@@ -494,20 +402,20 @@
     "        #6\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        #df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "#\n",
-    "        df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        #df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
-    "        #dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
-    "        #dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
+    "        dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
+    "        dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
     "\n",
     "        #-------------------------------------------------------#\n",
     "        \n",
     "    except FileNotFoundError:\n",
     "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
     "\n",
-    "#dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
-    "#dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
+    "dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
+    "dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
    ]
   }
  ],
