--- a/historicoCorregido_testdiario_contratos.ipynb
+++ b/historicoCorregido_testdiario_contratos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from datetime import datetime, timedelta\n",
     "import sqlalchemy\n",
     "import urllib\n",
-    "import TAPI   "
+    "import TAPI"
    ]
   },
   {
@@ -106,23 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-03\n",
-      "2024-05-12\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-12\n",
+      "2024-05-14\n"
      ]
     }
    ],
@@ -133,31 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DC25E582FA26C37903258B11007DD93F\n"
+      "20-04-2024\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
@@ -165,16 +157,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D9A53806DF982B9803258B12007DAFDB\n"
+      "21-04-2024\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
@@ -182,28 +174,154 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D9447D631F4050B903258B150082626B\n"
+      "22-04-2024\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_16428\\4049351914.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30-04-2024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_7224\\1978835371.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
     }
    ],
    "source": [
@@ -228,21 +346,21 @@
     "#-------------------------------------------------------#\n",
     "# Fechas para seleccionar el día de la carga se debe iterar\n",
     "\n",
-    "fecha_desde_bd = ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
-    "fecha_datetime = datetime.strptime(fecha_desde_bd, \"%Y-%m-%d\")\n",
-    "\n",
+    "# fecha_desde_bd = ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
+    "# fecha_datetime = datetime.strptime(fecha_desde_bd, \"%Y-%m-%d\")\n",
+    "# \n",
     "# Sumar un día\n",
-    "fecha_siguiente = fecha_datetime + timedelta(days=1)\n",
+    "# fecha_siguiente = fecha_datetime + timedelta(days=1)\n",
     "\n",
     "# Convertir de nuevo a string si es necesario\n",
-    "fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\")\n",
-    "fecha_hasta = ultimo_dia_CAMM()\n",
+    "#fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\")\n",
+    "#fecha_hasta = ultimo_dia_CAMM()\n",
+    "#\n",
+    "#fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
+    "#fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
     "\n",
-    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
-    "fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
-    "\n",
-    "fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
+    "fecha_desde = \"2024-04-20T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2024-04-30T23:59:59.000-03:00\"\n",
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
@@ -288,7 +406,7 @@
     "            if response.status_code == 200:\n",
     "                PPO=response.json()\n",
     "                doc_id = PPO[-1]['id']\n",
-    "                print(doc_id)\n",
+    "                print(dia_mdb)\n",
     "            else:\n",
     "                print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
     "    except requests.exceptions.RequestException as e:\n",
@@ -402,20 +520,20 @@
     "        #6\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        #df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "#\n",
-    "        #df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
-    "        dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
-    "        dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
+    "        df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "\n",
+    "        #dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
+    "        #dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
     "\n",
     "        #-------------------------------------------------------#\n",
     "        \n",
     "    except FileNotFoundError:\n",
     "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
     "\n",
-    "dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
-    "dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
+    "#dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
+    "#dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
    ]
   }
  ],
